--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,5 @@
 @import "partials/_helpers";
 @import "partials/_buttons";
-@import "partials/card";
+@import "partials/_card";
 @import "partials/badges";
 @import "_variables";
