--- a/src/assets/scss/partials/_card.scss
+++ b/src/assets/scss/partials/_card.scss
@@ -1,9 +1,14 @@
 .cardWrapper {
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
     background: #ffffff;
     box-shadow: 8px 8px 5px -8px rgba(143,143,143,0.5);
     border: 1px solid rgba(143,143,143,0.5);
-    margin: 0 10px;
+    margin: 10px 20px;
+}
+
+.item-col {
+    padding: 8px 5px;
 }
