--- a/src/assets/scss/partials/_badges.scss
+++ b/src/assets/scss/partials/_badges.scss
@@ -1,6 +1,12 @@
 .badge {
     border-radius: 23px;
     color: #000000;
+    padding: 2px 10px;
+    font-size: 12px;
+    margin: 5px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 
     &-grey {
         background-color: #f7f7f7;
@@ -8,9 +14,11 @@
 }
 
 .legends {
-    min-width: 20px;
-    min-height: 20px;
+    min-width: 10px;
+    min-height: 10px;
     border-radius: 56%;
+    display: inline-block;
+    margin-right: 3px;
     
     &-orange {
         background-color: orange;        
