--- a/src/assets/scss/partials/_buttons.scss
+++ b/src/assets/scss/partials/_buttons.scss
@@ -4,6 +4,7 @@
     border-radius: 23px;
     padding: 10px 15px;
     background-color: #003996;
+    text-align: center;
 }
 
 .buttonSecondary {
@@ -12,4 +13,5 @@
     border-radius: 23px;
     padding: 10px 15px;
     background-color: #d8e1ef;
+    text-align: center;
 }
